# gatekeeper

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TIRITH.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/gatekeeper/: Cargo.toml
crates/gatekeeper-core/: Cargo.toml
crates/gatekeeper-core/benches/: perf.rs
crates/gatekeeper-core/src/: engine.rs  output.rs  policy.rs  runner.rs
crates/gatekeeper-core/src/rules/: hostname.rs
crates/gatekeeper-core/tests/: golden_fixtures.rs  policy_integration.rs
crates/gatekeeper/assets/shell/: gatekeeper.sh
crates/gatekeeper/src/: assets.rs  main.rs
crates/gatekeeper/src/cli/: check.rs  completions.rs  diff.rs  doctor.rs  init.rs  manpage.rs  paste.rs  receipt.rs  run.rs  score.rs  why.rs
crates/gatekeeper/tests/: cli_integration.rs
crates/tirith-core/: Cargo.toml
crates/tirith-core/src/: homoglyph.rs  lib.rs  output.rs
crates/tirith-core/src/rules/: ecosystem.rs  (+2 more)
crates/tirith/tests/: cli_integration.rs
docs/: compatibility.md  cookbook.md  dogfood-guide.md  homebrew-core.md  roadmap.md  security.md  threat-model.md  troubleshooting.md  uninstall.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: byte_scanner.rs  extractor.rs  normalizer.rs  tokenizer_fish.rs  tokenizer_posix.rs  tokenizer_powershell.rs  url_parser.rs
scripts/: install.sh  update-data.sh
shell/lib/: bash-hook.bash  fish-hook.fish  zsh-hook.zsh
tests/fixtures/: README.md  command.toml  ecosystem.toml  hostname.toml  path.toml  terminal.toml
tests/integration/: cli_tests.rs  golden_fixtures.rs
(+4 files in other folders)
